--- a/contact/index.html
+++ b/contact/index.html
@@ -22,8 +22,8 @@
         <nav>
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="./blog/index.html">Blog</a></li>
+                <li><a href="../index.html#about">About</a></li>
+                <li><a href="../blog/index.html">Blog</a></li>
                 <li><a href= "#" class="navCurrentPage">Contact</a></li>
             </ul>
         </nav>
