--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/e8e5081168.js" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body>  
 <header class="headerMain">
     <div class="wrapper">
         <nav>
@@ -35,7 +35,7 @@
 
 <main>
     <!-- START OF INFORMATION SECTION -->
-    <section class="informationSec" id="#home">
+    <section class="informationSec" id="about">
 
         <div class="wrapper">
             <ul class="gridContainer">
