--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@
                 <ul class="sideMenu">
                     <li><a href="../index.html">Home</a></li>
                     <li><a href="../index.html#about">About</a></li>
-                    <li><a href="../blog/index.html">Blog</a></li>
+                    <li><a href="../blog/">Blog</a></li>
                     <li><a href= "#" class="navCurrentPage">Contact</a></li>
                 </ul>
             </nav>
