--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <ul class="sideMenu">
                     <li><a href="" class="navCurrentPage">Home</a></li>
                     <li><a href="./index.html#about">About</a></li>
-                    <li><a href="./blog/index.html">Blog</a></li>
-                    <li><a href="./contact/index.html">Contact</a></li>
+                    <li><a href="./blog/">Blog</a></li>
+                    <li><a href="./contact/">Contact</a></li>
                 </ul>
             </nav>
             <h1>The <span class="mainHeadSpan">Restaurant</span> Mall</h1>
